feat: integrate with Web3

--- a/src/screens/List/List.module.sass
+++ b/src/screens/List/List.module.sass
@@ -13,6 +13,8 @@
       padding-left: var(--bs-gutter-x, 0.75rem)
     img
       width: 80px
+      height: 80px
+      object-fit: cover
       border: 2px solid white
       border-radius: 50%
     span
