--- a/src/screens/Home/Card/Card.module.sass
+++ b/src/screens/Home/Card/Card.module.sass
@@ -59,10 +59,13 @@
     margin-top: 10px
     margin-bottom: 10px
     padding: 3px
-    button
+    button, a
         width: 50%
         padding: 12px 0 10px 0
         font-weight: bold
+        display: inline-block
+        text-align: center
+        cursor: pointer
     .buy
         border-radius: 30px
         background-color: white
