feat: update uikit library

--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -123,10 +123,16 @@
 
 .buttonWrapper
     .profileButton
-        margin-right: 30px
+        margin-right: 15px
     .primaryButton
-        font-weight: bold
         padding: 8px 20px
+        margin-right: 15px
+    .accountButton
+        font-weight: bold
+        padding: 6px 15px
+        background-color: #B7BDBB
+        border-radius: 12px
+        color: black
 .mobileContainer
     display: none
     +m
